--- a/templates/addaddressbook.htm
+++ b/templates/addaddressbook.htm
@@ -17,6 +17,7 @@
 				<tr>
 					<td   class="orange-txt1 clr padtop10 padbottom10 " colspan=2>Add New Address</td>
 				</tr>
+				<tr bgcolor="#FFFFFF"><td align=left width=100><b>Address Type</b></td> <td align=left><input type="text" name="customers_addressbook"> </td> </tr>
 	<tr bgcolor="#FFFFFF"><td align=left width=100><b>First Name</b></td> <td align=left><input type="text" name="shipping_firstname"> </td> </tr>
 	<tr bgcolor="#FFFFFF"><td align=left><b>Last Name</b></td> <td align=left><input type="text" name="shipping_lastname"> </td> </tr>
 	<tr bgcolor="#FFFFFF"><td align=left><b>City</b></td> <td align=left><input type="text" name="shipping_city"></td> </tr>
