--- a/templates/contactus.htm
+++ b/templates/contactus.htm
@@ -27,8 +27,7 @@
 <div  class="  clr">
   <div class="container">
  
-<div class="home-txt padleft10 padbottom10 clr">
-Home <span class="home-txt-arrow"> </span>&gt; Contact Us </div>
+<div class="home-txt padleft10 padbottom10 clr"><a href="/" class="home-txt">Home</a> <span class="home-txt-arrow">&gt; </span> <a href="/contactus" class="home-txt">Contact Us</a></div>
 <div class="orange-txt padleft10 clr">CONTACT US<br></div>
 <!--image starts-->
 <div class="padtop5 padleft10 clr" align=left>
@@ -49,14 +48,14 @@ Home <span class="home-txt-arrow"> </span>&gt; Contact Us </div>
 <div><strong>Phone Orders:&nbsp; 772-462-0203, then press option 4</strong><br></div>
 <p>E-mail us at: <a href="mailto:Support@saltwaterfish.com">Support@Saltwaterfish.com</a> <b>This is the fastest and most efficient way to communicate with us.</b> </p>
 <p>You can reach us by phone:&nbsp;772-462-0203. Please follow the prompts carefully.&nbsp; A representative will return your call promptly in the order it was received.&nbsp; Please leave a message if prompted.&nbsp; Our customer service representatives work Monday through Friday:&nbsp;&nbsp;8:00&nbsp;AM - 4:30 PM.</p>
-<p>To access your important account information, please use the <a href="myaccount.asp">My Account/Order Tracking</a> button on the top of the site.<br></p>
+<p>To access your important account information, please use the <a href="/myaccount">My Account/Order Tracking</a> button on the top of the site.<br></p>
 <p>This will bring you into your personal area of the site.Here you can track your shipments, initiate a Guarantee Request claim, check your gift certificate balance and store credit balances, etc. The system has been set up so that you can address your needs entirely online. </p>
 <p>For your convenience, all delivery address changes can be made online by clicking the My Account/Order Tracking button.</p>
-<p>Any requests for credits or refunds should be initiated through the <a href="myaccount.asp">My Account/Order Tracking</a> page of the website</p>
+<p>Any requests for credits or refunds should be initiated through the <a href="/myaccount">My Account/Order Tracking</a> page of the website</p>
 <p>Saltwaterfish.com receives several hundred emails per day. We encourage you to use and search the Saltwaterfish.com <a href="vb">Message Boards</a> for questions regarding your aquarium. </p>
 <p>There are several thousand people on the Saltwaterfish.com Message Boards every day, so we highly recommend you give it a try. For example, if you want to know what your fellow hobbyists have to say about Clownfish. You can type "Clownfish" in the search feature of the Saltwaterfish.com Message Board and find more than 3,000 posts that contain the word "Clownfish". You might find this search tool can provide you with some really great free information. The Saltwaterfish.com Message Board has more than 3,000,000 posts concerning saltwater fish and aquariums.</p>
 <p>Orders generally ship within 1-2 business shipping days.</p>
-<p>You can use the <a href="myaccount">My Account/Order Tracking</a> button to check your order status anytime. </p>
+<p>You can use the <a href="/myaccount">My Account/Order Tracking</a> button to check your order status anytime. </p>
 <p>Saltwaterfish.com ships Marine Life orders on Monday, Tuesday, Wednesday, and Thursday in the order they are received. You will receive a confirmation email with your FedEx tracking number when your order has shipped. If you need a specific delivery day please order at least a couple of business days ahead of time and request your delivery day in the Delivery Calendar area at the end of the shopping cart. We cannot deliver Marine Life on Mondays. If you have any other questions concerning orders please visit our Customer Service Center at <a href="mailto:support@saltwaterfish.com">support@saltwaterfish.com</a>.</p>
 <p>Please use the "Waiting List" feature if you would like to be notified when an item is back in stock.</p></td>
 	    </tr>
