--- a/templates/fishschool.htm
+++ b/templates/fishschool.htm
@@ -133,8 +133,9 @@ text-transform:capitalize;
 
 <div class="float-left wid20">&nbsp;&nbsp;</div>
 <div class="float-left wid748">
-
-<div class="orange_heading padtop20">Saltwater Fish School</div>
+<div class="home-txt padtop10 padbottom10 clr">
+<a href="/" class="home-txt">Home</a> <span class="home-txt-arrow">&gt; </span> <a href="/fishschool" class="home-txt">SaltWater Fish School</a> </div>
+<div class="orange_heading padtop10">Saltwater Fish School</div>
 <div class="clrs">&nbsp;</div>
 <div class="clrs wid80">
 <div class="clrs">
@@ -200,7 +201,7 @@ text-transform:capitalize;
 the nformation is parsed to the shopping Cart.  We are not aware of any API for such now. Scott is working with Dan Gill
 	</li>
 	</ul>
-	<div class="clrs"><div class="read_more"><a href="forums.saltwaterfish.com">read more</a></div></div>
+	<div class="clrs"><div class="read_more"><a href="http://forums.saltwaterfish.com">read more</a></div></div>
 	</div>
 </div>
 <div class="table_middle" >&nbsp;</div>
