--- a/templates/header.htm
+++ b/templates/header.htm
@@ -113,7 +113,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="/quicklist?cat=15" >click here</a></span> to see a Quick View of    <span> all Available Marine Fish </span>.</div>
+<span><a href="/quicklist?cat=15" >click here</a></span> to see a Quick View of    <span> <a href="/subcats?scat=15" >all Available Marine Fish</a> </span>.</div>
 <div class="clr padtop20">
 
 <table class="sub_txt " ><tr >
@@ -141,7 +141,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="/quicklist?cat=17" >click here</a></span> to see a Quick View of    <span> all Available Marine Inverts</span>.</div>
+<span><a href="/quicklist?cat=17" >click here</a></span> to see a Quick View of    <span><a href="/subcats?scat=17">all Available Marine Inverts</a></span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "17"|categoriesdisplay %}
@@ -166,7 +166,7 @@ Shipping Rates</div>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="/quicklist?cat=16" >click here</a></span> to see a Quick View of    <span>all Available Marine Corals</span>.</div>
+<span><a href="/quicklist?cat=16" >click here</a></span> to see a Quick View of    <span><a href="/subcats?scat=16" >all Available Marine Corals</a></span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "16"|categoriesdisplay %}
@@ -186,14 +186,14 @@ Shipping Rates</div>
 </li>
 </ul>
 </li>
-<li><a href="/reefpackages" >Reef Packages</a></li>
+<li><a href="/category?id=2" >Reef Packages</a></li>
 <li><a href="/quicklist?cat=4" >Live Rock/Sand</a></li>
 <li><a href="/quicklist?cat=3">Supplies</a>
 <ul>
 <li>
 <div class="sub_bg">
 <div class="text-top clr padleft20">Please select from the available Marine Fish Species below <br />or
-<span><a href="/quicklist?cat=3" >click here</a></span> to see a Quick View of    <span> all Available Marine Supplies</span>.</div>
+<span><a href="/quicklist?cat=3" >click here</a></span> to see a Quick View of    <span> <a href="/subcats?scat=3" >all Available Marine Supplies</a></span>.</div>
 <div class="clr padtop20">
 <table class="sub_txt " ><tr >
 {% for cats in "3"|categoriesdisplay %}
