--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
 <a href="/mytickets">
 <div class="vertical_inner">
 <div class="float-left"><img src="misc/images/user_img.png" width="16" height="16" border="0" /></div>
-<div class="float-left padleft10">MY LAST SUPPORT REQUESTS</div>
+<div class="float-left padleft10">My Support Requests</div>
 </div>
 </a>
 </li>
