--- a/templates/myaccount_links.htm
+++ b/templates/myaccount_links.htm
@@ -34,7 +34,7 @@
 <a href="/mytickets">
 <div class="vertical_inner">
 <div class="float-left"><img src="/misc/images/user_img.png" width="16" height="16" border="0" /></div>
-<div class="float-left padleft10">MY SUPPORT REQUESTS</div>
+<div class="float-left padleft10">My Support Requests</div>
 </div>
 </a>
 </li>
@@ -78,7 +78,7 @@
 <a href="/addressbook">
 <div class="vertical_inner">
 <div class="float-left"><img src="/misc/images/book_img.png" width="17" height="13" border="0" /></div>
-<div class="float-left padleft10 ">MY ADDRESS BOOK</div>
+<div class="float-left padleft10 ">MY ADDRESSES BOOK</div>
 </div>
 </a></li>
 </ul>
