--- a/templates/pages.htm
+++ b/templates/pages.htm
@@ -28,7 +28,7 @@
   <div class="container">
  
 <div class="home-txt padleft10 padbottom10 clr">
-Home <span class="home-txt-arrow">&gt; </span> {{allpages.htmlpage}} </div>
+<a href="/" class="home-txt">Home</a> <span class="home-txt-arrow">&gt; </span> <a href="pages?pageid={{allpages.id}}" class="home-txt">{{allpages.htmlpage}}</a> </div>
 <div class="orange-txt padleft10 clr">{{allpages.htmlpage}}<br></div>
 <!--image starts-->
 <div class="padtop5 padleft10 clr" align=left>
