--- a/templates/rmarequest.htm
+++ b/templates/rmarequest.htm
@@ -58,7 +58,7 @@
 <div class="clr my_account_link_new">
 <div class="clr">
 <div class="float-left wid163">
-<div class="clr my_account_link">Home  <span>&gt; My Account</span><span> &gt; Guarantee Request Service</span></div>
+<div class="clr my_account_link"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span><span> &gt; Guarantee Request Services </span></div>
 </div>
 <div class="float-right wid160"><div class="float-left"><img src="misc/images/arro.jpg" /></div>
 <div class="float-right"><span><a href="/orderstatus">Click here to go back</a></span></div>
