--- a/templates/termscon.htm
+++ b/templates/termscon.htm
@@ -27,8 +27,7 @@ body {
 <div  class="  clr">
   <div class="container">
  
-<div class="home-txt padleft10 padbottom10 clr">
-Home <span class="home-txt-arrow"> </span>&gt;  Terms and Conditions</div>
+<div class="home-txt padleft10 padbottom10 clr"><a href="/" class="home-txt">Home</a> <span class="home-txt-arrow">&gt; </span> <a href="/termsconditions" class="home-txt">Terms and Conditions </a></div>
 <div class="orange-txt padleft10 clr">POLICIES, TERMS AND CONDITIONS:<br></div>
 <!--image starts-->
 <div class="padtop5 padleft10 clr" align=left>
