--- a/misc/category.css
+++ b/misc/category.css
@@ -107,7 +107,7 @@ padding:10px 0px;
 	height: 25px;
 	width: 99px;
 	float:left;
-	font-family: "Open Sans";
+	font-family: Arial, Helvetica, sans-serif;
 	font-size:14px;
 	font-weight: bold;
 	color: #434343;
