--- a/misc/css3/style.css
+++ b/misc/css3/style.css
@@ -1,6 +1,6 @@
 body{
 	
-	font-family: 'PT Sans', sans-serif;
+	font-family:Arial, Helvetica, sans-serif;
 	 
 	 	
 	color:#434343;
@@ -8,8 +8,7 @@ body{
 	background-color:#FFFFFF;
 }
 p{
-font-family: 'PT Sans', sans-serif;
-font-size:13px;
+font-family:Arial, Helvetica, sans-serif;font-size:13px;
 color:#434343;
 line-height:20px;
 padding:10px 0px;
@@ -74,7 +73,7 @@ color:#434343;
 	float:left;
 	width:auto;
 	padding:5px 15px;
-	font-family: 'Open Sans', sans-serif;	
+	font-family:Arial, Helvetica, sans-serif;	
 	font-size:15px;
 	color:#3c9bd1;
 	text-transform:capitalize;
@@ -120,8 +119,7 @@ padding-bottom:10px;
 
 /* rma request section */
 .rma_heading{
-font-family: 'Open Sans', sans-serif;
-font-size:16px;
+font-family:Arial, Helvetica, sans-serif;font-size:16px;
 font-weight:700;
 color:#434343;
 height:20px;
@@ -129,21 +127,18 @@ padding-top:7px;
 padding-left:8px;
 }
 .rma_content{
-font-family: 'Open Sans', sans-serif;
-font-size:13px;
+font-family:Arial, Helvetica, sans-serif;font-size:13px;
 color:#434343;
 padding-left:8px;
 }
 .rma_content1{
-font-family: 'Open Sans', sans-serif;
-font-size:13px;
+font-family:Arial, Helvetica, sans-serif;font-size:13px;
 color:#434343;
 padding-left:8px;
 text-align:center;
 }
 .rma_content2{
-font-family: 'Open Sans', sans-serif;
-font-size:12px;
+font-family:Arial, Helvetica, sans-serif;font-size:12px;
 color:#434343;
 padding-left:5px;
 }
