--- a/misc/style_new.css
+++ b/misc/style_new.css
@@ -570,7 +570,7 @@ vertical-align:text-top;
 	float: right;
 	height: 25px;
 	width: 87px;
-	font-family: "Open Sans";
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #434343;
 	line-height:25px;
@@ -589,7 +589,7 @@ vertical-align:text-top;
 	height: 25px;
 	width: 99px;
 	float:left;
-	font-family: "Open Sans";
+	font-family: Arial, Helvetica, sans-serif;
 	font-size:14px;
 	font-weight: bold;
 	color: #434343;
