--- a/templates/editrequestform.htm
+++ b/templates/editrequestform.htm
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load tagsfilter %}
+<link type="text/css" rel="stylesheet" href="/misc/myaccount.css" />
 <style>
 .content-label {
     color: #000000;
@@ -17,8 +18,8 @@
  
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
-<div class="clr my_account_link">Home  <span>&gt; My Account</span><span> &gt; Support Requests</span></div>
- <div class="clr my_account_title padtop20 padbottom13">{{crmitems.subject}} </div>
+<div class="clr my_account_link padbottom13"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span><span> &gt; <a href="/mytickets">Support Requests</a> </span></div>
+ <div class="clr my_account_title padtop10 padbottom13">{{crmitems.subject}} </div>
 <div class="clr myaccount_bg1">
   <div class="clr padtop5">
   <table width="100%" border="0" cellpadding="2">
