--- a/templates/productindext.htm
+++ b/templates/productindext.htm
@@ -3,7 +3,7 @@
 
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop1">
-<div class="clr my_account_link padbottom13">Home  <span> &gt; Product Index </span></div>
+<div class="clr my_account_link padbottom13"><a href="/" class="home-txt">Home</a> <span class="home-txt-arrow">&gt; </span> <a href="/productindex" class="home-txt">Product Index </a></div>
  <div class="clr my_account_title padtop5 padbottom13">Product Index </div>
  <div class="clr myaccount_bg" style="height:100% !important;">
 <div style="clear:both; width:700px; height:21px; line-height:21px; " >
