--- a/templates/rma.htm
+++ b/templates/rma.htm
@@ -6,7 +6,7 @@
 {% load tagsfilter %}
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop5">
-<div class="clr my_account_link">Home  <span>&gt; My Account</span><span> &gt; Guarantee Request Service</span></div>
+<div class="clr my_account_link"><span><a href="/">Home</a> &gt; <a href="/myaccount">My Account</a></span><span> &gt; Guarantee Request Services </span></div>
  <div class="clr my_account_title padtop20 padbottom13">Guarantee Request Service </div>
 <div class="clr myaccount_bg1">
  
