--- a/templates/waitinglist_popup.htm
+++ b/templates/waitinglist_popup.htm
@@ -38,7 +38,7 @@ $(document).ready(function(){
 	<tr>
 		<td><table width="95%" border="0" align="center" cellpadding="0" cellspacing="0">
 				<tr>
-					<td   class="orange-txt1 clr padtop20 padbottom10 ">Add to Wish List</td>
+					<td   class="orange-txt1 clr padtop20 padbottom10 ">Add To Waiting List</td>
 				</tr>
 				<tr>
 					<td><img src="/misc/images/account-line.jpg" width="100%"  height="1" border="0" colspan=2 class="padtop10 padbottom20" /></td>
